--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,7 +295,12 @@ main {
     font-weight: normal;
 }
 
-.slidershow{
+.slidershow {
+    display: flex;
+    width: 1000px;
+    margin: 20px auto;
+}
+.slideshow2 {
     display: flex;
     width: 1000px;
     margin: 20px auto;
